--- a/dbms/src/dbms/TestGUI.form
+++ b/dbms/src/dbms/TestGUI.form
@@ -64,9 +64,9 @@
       <Group type="103" groupAlignment="0" attributes="0">
           <Group type="102" alignment="0" attributes="0">
               <EmptySpace pref="79" max="32767" attributes="0"/>
-              <Group type="103" groupAlignment="3" attributes="0">
-                  <Component id="operationComboBox" alignment="3" min="-2" max="-2" attributes="0"/>
+              <Group type="103" groupAlignment="0" attributes="0">
                   <Component id="tableComboBox" alignment="1" min="-2" max="-2" attributes="0"/>
+                  <Component id="operationComboBox" min="-2" max="-2" attributes="0"/>
               </Group>
               <EmptySpace type="separate" max="-2" attributes="0"/>
               <Component id="proceedButton" min="-2" max="-2" attributes="0"/>
